# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("fuzztest") {
  testonly = true
  deps = [
    "gltf2loader_fuzzer:fuzztest",

    # Minimal-link fuzzers (compile only the loader/parse translation units; no
    # lume_3d_src/render/engine-DLL link). See gltf2_*_fuzzer/BUILD.gn.
    "gltf2_accessor_fuzzer:fuzztest",
    "gltf2_glb_builder_fuzzer:fuzztest",
    "gltf2_json_loader_fuzzer:fuzztest",
  ]
}
