# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/graphic/graphic_3d/lume/lume_config.gni")

module_output_path = "graphic_3d/graphic_3d"

##############################fuzztest##########################################
# Full meta-plugin fuzzer: the deserializer needs the live meta object registry, so this brings up
# the engine plugin registry and loads the MetaObject plugin at runtime (dynamic, no meta/engine
# libs linked) -- the same bootstrap the meta unit tests use. Runs on-device only.
ohos_fuzztest("JsonImporterFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "//foundation/graphic/graphic_3d/lume/LumeMeta/test/fuzztest/json_importer_fuzzer"

  configs = [
    "${LUME_BASE_PATH}:lume_base_api_config",
    "${LUME_CORE_PATH}:lume_engine_api",
    "${LUME_META_PATH}:lume_meta_api_config",

    # Provides OHOS_PLATFORM_CORE_PATH / OHOS_PLATFORM_PLUGINS_PATH (the on-device .so paths).
    "${LUME_BASE_PATH}:lume_unit_test_config",
  ]

  include_dirs = [
    # Test::DynamicLibrary (the dlopen wrapper) + its header, reused from the unit tests.
    "//foundation/graphic/graphic_3d/lume/LumeMeta/test/unittest/common",
  ]

  defines = [
    # The engine plugin entry points are dlsym'd function pointers in this mode.
    "CORE_DYNAMIC=1",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  sources = [
    "json_importer_fuzzer.cpp",
    "${LUME_META_PATH}/test/unittest/common/load_lib.cpp",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = [
    ":JsonImporterFuzzTest",
  ]
}
###############################################################################
