# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/graphic/graphic_3d/lume/lume_config.gni")

module_output_path = "graphic_3d/graphic_3d"

##############################fuzztest##########################################
ohos_fuzztest("RenderNodeGraphLoaderFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file = "//foundation/graphic/graphic_3d/lume/LumeRender/test/fuzztest/render_node_graph_loader_fuzzer"

  include_dirs = [
    "${LUME_BASE_PATH}/api",
    "${LUME_CORE_PATH}/api",
    "${LUME_RENDER_PATH}/api",
    "${LUME_RENDER_PATH}/src",
  ]

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-include",
    rebase_path(
        "//foundation/graphic/graphic_3d/lume/LumeRender/test/fuzztest/fuzz_prelude.h",
        root_build_dir),
  ]

  defines = [
    "CORE_BUILD_BASE=1",
  ]

  sources = [
    "render_node_graph_loader_fuzzer.cpp",
    "${LUME_RENDER_PATH}/src/loader/render_node_graph_loader.cpp",

    # json::parse / json::to_string are explicit-instantiation templates emitted only under
    # JSON_IMPL/JSON2_IMPL -- compile them in instead of linking the engine library.
    "../json_impl.cpp",
    "../json2_impl.cpp",
  ]

  # securec (memcpy_s etc.) is pulled transitively from c_utils:utils -- do NOT add
  # //third_party/bounds_checking_function configs here (deps_guard rejects the direct InnerApi).
  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
  ]

  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = [
    ":RenderNodeGraphLoaderFuzzTest",
  ]
}
###############################################################################
