# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/graphic/graphic_3d/lume/lume_config.gni")

module_output_path = "graphic_3d/graphic_3d"

##############################fuzztest##########################################
# Supplementary config layered on top of the canonical lume_3d api/config configs (which provide
# the include dirs + defines that compile these sources inside lume_3d_src). It only adds the
# fuzz-harness include dir and disables logging/perf, which removes the single engine symbol the
# loader would otherwise need (Core3D::GetPluginRegister via PluginLog).
config("gltf2_min_fuzz_extra") {
  visibility = [ ":*" ]

  include_dirs = [
    "${LUME_CORE3D_PATH}test/fuzztest",  # gltf_fuzz_common.h, fuzz_consumer.h
  ]

  defines = [
    "PLUGIN_LOG_DISABLED=1",
    "CORE_PERF_ENABLED=0",
  ]
}

# Minimal-link fuzzer for the glTF/GLB *parse* path. Compiles only the loader translation units
# + the JSON parser directly; deliberately does NOT depend on lume_3d_src, the render library,
# png/jpg or the engine DLL. The loader's free function (GLTF2::LoadGLTF) needs none of them.
ohos_fuzztest("Gltf2JsonLoaderFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file =
      "//foundation/graphic/graphic_3d/lume/Lume_3D/test/fuzztest/gltf2_json_loader_fuzzer"

  sources = [
    "gltf2_json_loader_fuzzer.cpp",

    # Loader parse path compiled straight into the executable:
    #  - gltf2_loader.cpp : LoadGLTF + ParseGLTF (the free functions)
    #  - gltf2_util.cpp   : parse helpers, base64/meshopt decode, GLTF2::Data accessors
    #  - util/json.cpp    : JSON_IMPL (not part of lume_3d_src)
    "${LUME_CORE3D_PATH}src/gltf/gltf2_loader.cpp",
    "${LUME_CORE3D_PATH}src/gltf/gltf2_util.cpp",
    "${LUME_CORE3D_PATH}src/util/json.cpp",
  ]

  # Same api/config configs lume_3d_src uses to compile these files (include dirs + defines only,
  # no linking), plus the harness/logging-disable layer.
  configs = [
    "${LUME_BASE_PATH}:lume_base_api_config",
    "${LUME_CORE_PATH}:lume_engine_api",
    "${LUME_CORE_PATH}:lume_component_help_config",
    "${LUME_RENDER_PATH}:lume_render_api",
    "${LUME_CORE3D_PATH}:lume_3d_api",
    "${LUME_CORE3D_PATH}:lume_3d_config",
    ":gltf2_min_fuzz_extra",
  ]

  cflags = [
    "-g",
    "-O1",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  external_deps = [
    "hilog:libhilog",
    "c_utils:utils",
    "bounds_checking_function:libsec_shared",
  ]

  if (!LUME_OHOS_BUILD) {
    external_deps += [ "meshoptimizer:meshoptimizer" ]
  }

  part_name = "graphic_3d"
  subsystem_name = "graphic"
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = [
    ":Gltf2JsonLoaderFuzzTest",
  ]
}
